--- a/src/css/global.css
+++ b/src/css/global.css
@@ -34,3 +34,10 @@
   opacity: 1;
   transition-duration: 0.2s;
 }
+
+.volume-svg {
+  z-index: 2;
+  margin-left: 2vw;
+  margin-top: 2vw;
+  position: fixed;
+}
