--- a/src/components/content-pot/content-pot.css
+++ b/src/components/content-pot/content-pot.css
@@ -4,10 +4,12 @@
 .content__pot__img {
   position: absolute;
   width: 30vw;
-  cursor: pointer;
   /* width: 436px; */
 }
 
+.content__pot__img__sound {
+  cursor: pointer;
+}
 .content__pot__img-1 {
   left: 20vw;
   top: 529px;
