--- a/src/components/mobile/mobile.css
+++ b/src/components/mobile/mobile.css
@@ -29,3 +29,16 @@
   padding-left: 15vw;
   padding-right: 15vw;
 }
+
+.layout__mobile {
+  animation: fadeIn 2s ease-in;
+}
+
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
